# SplendorRL

./: .gitignore  README.md  pyproject.toml
files/: developments.pickle  nobles.pickle  raw_developments.csv  raw_nobles.csv
scripts/: load_developments.py  load_nobles.py
splendor/: cards.py  cli.py  env.py  game.py  main.py  player.py  policy.py  sample.py  splendor.py  tokens.py  train.py
splendor/agents/: vpg.py
splendor/algos/: __init__.py  algorithm.py  reinforce.py  vpg.py
splendor/environment/: __init__.py  cards.py  env.py  game.py  player.py  tokens.py
tests/: env_test.py  test_batch_info.py  test_sample.py
tests/algos/: test_baseline.py  test_reinforce_rewards.py
