[tool.poetry]
name = "splendor"
version = "0.1.0"
description = ""
authors = ["Thai Villaluna <thaivillaluna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^1.1.1"
pettingzoo = "^1.24.3"
pandas = "^2.2.3"
torch = "^2.6.0"
supersuit = "^3.9.3"
pytest = "^8.3.5"
wandb = "^0.19.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
